; ModuleID = '/home/carl/AnghaBench/libgit2/tests/iterator/extr_workdir.c_test_iterator_workdir__icase.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/iterator/extr_workdir.c_test_iterator_workdir__icase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_ITERATOR_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@.str = private unnamed_addr constant [6 x i8] c"icase\00", align 1
@g_repo = common dso_local global i32 0, align 4
@GIT_ITERATOR_INCLUDE_TREES = common dso_local global i32 0, align 4
@GIT_ITERATOR_DONT_AUTOEXPAND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_iterator_workdir__icase() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_4__, align 4
  %3 = bitcast %struct.TYPE_4__* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %3, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_ITERATOR_OPTIONS_INIT to i8*), i64 4, i1 false)
  %4 = call i32 @cl_git_sandbox_init(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32 %4, i32* @g_repo, align 4
  %5 = load i32, i32* @g_repo, align 4
  %6 = call i32 @git_iterator_for_workdir(i32** %1, i32 %5, i32* null, i32* null, %struct.TYPE_4__* %2)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @expect_iterator_items(i32* %8, i32 20, i32* null, i32 20, i32* null)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_iterator_free(i32* %10)
  %12 = load i32, i32* @GIT_ITERATOR_INCLUDE_TREES, align 4
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @g_repo, align 4
  %15 = call i32 @git_iterator_for_workdir(i32** %1, i32 %14, i32* null, i32* null, %struct.TYPE_4__* %2)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32*, i32** %1, align 8
  %18 = call i32 @expect_iterator_items(i32* %17, i32 22, i32* null, i32 22, i32* null)
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @git_iterator_free(i32* %19)
  %21 = load i32, i32* @GIT_ITERATOR_DONT_AUTOEXPAND, align 4
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* @g_repo, align 4
  %24 = call i32 @git_iterator_for_workdir(i32** %1, i32 %23, i32* null, i32* null, %struct.TYPE_4__* %2)
  %25 = call i32 @cl_git_pass(i32 %24)
  %26 = load i32*, i32** %1, align 8
  %27 = call i32 @expect_iterator_items(i32* %26, i32 12, i32* null, i32 22, i32* null)
  %28 = load i32*, i32** %1, align 8
  %29 = call i32 @git_iterator_free(i32* %28)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_sandbox_init(i8*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_iterator_for_workdir(i32**, i32, i32*, i32*, %struct.TYPE_4__*) #2

declare dso_local i32 @expect_iterator_items(i32*, i32, i32*, i32, i32*) #2

declare dso_local i32 @git_iterator_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
